--- a/AldeaApp/AldeaApp/Views/Home/Index.cshtml
+++ b/AldeaApp/AldeaApp/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
 ﻿<div class="home">
+    <div id="fb-root"></div>
     <label>Bienvenido a la Asociación de Exalumnos Lasallistas ALDEA.</label>
     <img class="inicio" src="~/Content/ImagesOwner/aldea.jpg" />
+    <div class="fb-page" data-href="https://www.facebook.com/aldealasalle/?hc_ref=ART0bdmpnlvRsZctYulvRg71UECHbX4nSR4jw6FsSPsVCnOQlQbpsTnQvFGmcHKjRLo"
+         data-tabs="timeline,events,  messages" data-width="400" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+         data-show-facepile="true">
+        <blockquote cite="https://www.facebook.com/aldealasalle/?hc_ref=ART0bdmpnlvRsZctYulvRg71UECHbX4nSR4jw6FsSPsVCnOQlQbpsTnQvFGmcHKjRLo"
+                    class="fb-xfbml-parse-ignore">
+            <a href="https://www.facebook.com/aldealasalle/?hc_ref=ART0bdmpnlvRsZctYulvRg71UECHbX4nSR4jw6FsSPsVCnOQlQbpsTnQvFGmcHKjRLo">Asociación Lasallista de Exalumnos ALDEA</a>
+        </blockquote>
+    </div>
 </div>
