--- a/AldeaApp/AldeaApp/Content/custom.css
+++ b/AldeaApp/AldeaApp/Content/custom.css
@@ -139,12 +139,34 @@ label {
 #txtUsuario {
     display: block;
     margin: 0 auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 34%;
+    width: 25%;
 }
 #usertable {
     display: block;
     margin: 0 auto;
-    width: 55%;
+    width: 80%;
 }
+#labelh{
+    display: none;
+
+}
+#btnAgregarParametro {
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+#Modal_proyecto, #Modal_proyecto2{
+    margin-top: 10%;
+    display: inline-block;
+}
+    #Modal_proyecto2:hover {
+        background: #f9444d
+    }
 #foot {
     background: #213E84;
     color: #ffffff;
@@ -213,6 +235,18 @@ label {
     width: 500px;
     min-height: 300px;
 }
+#libro {
+    margin-left:5%;
+    text-align: right;
+    display: block;
+    display:inline-block;
+}
+#h2user {
+    text-align: center;
+    display: inline-block;
+    margin-right: 35%;
+    margin-left: 40%;
+}
 #btnRegistro {
     margin: 0 auto;
     margin-top: 30px;
@@ -266,4 +300,7 @@ th {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+#tbl {
+    width: 90%;
 }
