--- a/AldeaApp/AldeaApp/Views/Shared/_Layout.cshtml
+++ b/AldeaApp/AldeaApp/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
 
 <html lang="es">
 <head>
-    <link rel="shortcut icon"  src="~/Content/ImagesOwner/favicon.ico" />
+    <link rel="shortcut icon" src="~/Content/ImagesOwner/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <script src="~/Scripts/jquery.js"></script>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet"/>
     <script src="~/Content/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/Content/UI/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
@@ -27,14 +27,14 @@
 
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Index","Home")'>Inicio</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Registro","Home")'>Registrarse</a>
-        <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Modificar","Home")'>Modificar mi usuario</a>
+        <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Modificar","Home")'>Modificar usuarios</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Informacion","Home")'>Información ALDEA</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("ModificarInformacion","Home")'>Modificar aportes</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Usuarios","Home")'>Usuarios</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("AgregarPago","Home")'>Agregar pago usuario</a>
         <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("GenerarComprobante","Home")'>Generar comprobante</a>
-        <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("GenerarLibro","Home")'>Descargar libro</a>
-        <a id="btnsesion" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Login","Home")'>Iniciar sesión</a>
+        <a id="btnmodificarusuario" class="ui-button ui-widget ui-corner-all" href='@Url.Action("ModificarmiUsuario","Home")'>Modificar mi usuario</a>
+        <a id="btnbar" class="ui-button ui-widget ui-corner-all" href='@Url.Action("Login","Home")'>Iniciar sesión</a>
         <hr />
 
 
@@ -49,18 +49,19 @@
         </section>
     </div>
     <footer id="foot">
-            <hr />
-            <h5>La Corporación Universitaria Lasallista es una institución de Educación Superior sujeta a vigilancia del Ministerio de Educación Nacional Art.39, decreto 1295 de 2010.</h5>
-            <h5>Corporación Universitaria Lasallista</h5>
-            <h5>PBX 3201999 comunicaciones@lasallista.edu.co</h5>
-            <h5>notificacioneslegales@lasallista.edu.co</h5>
-            <h5>Carrera 51 118 sur 57 Caldas - Antioquia - Colombia</h5>
-            <h5>Copyright 2017 ® Todos los Derechos Reservados</h5>
+        <hr />
+        <h5>La Corporación Universitaria Lasallista es una institución de Educación Superior sujeta a vigilancia del Ministerio de Educación Nacional Art.39, decreto 1295 de 2010.</h5>
+        <h5>Corporación Universitaria Lasallista</h5>
+        <h5>PBX 3201999 comunicaciones@lasallista.edu.co</h5>
+        <h5>notificacioneslegales@lasallista.edu.co</h5>
+        <h5>Carrera 51 118 sur 57 Caldas - Antioquia - Colombia</h5>
+        <h5>Copyright 2017 ® Todos los Derechos Reservados</h5>
     </footer>
 </body>
-  </html>
+</html>
 <script type="text/javascript">
-
+    var identificacion;
+    var tipodocumento;
     $(function () {
         $(document).tooltip({
             position: {
@@ -146,7 +147,7 @@
                 success: function (respuesta) {
                     var cadena = "";
                     if (respuesta.Mensaje == "") {
-                        $('#contenedor').show();
+                       $('#contenedor').show();
                         cadena1 = respuesta.miusuario.CodUsuario;
                         $("#NumId").val(respuesta.miusuario.NumId);
                         $("#NomUsuario").val(respuesta.miusuario.NomUsuario);
@@ -280,6 +281,7 @@
 
         $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
+          //  $("table[id*=tblAdmin] th").removeAttr("onclick");
         });
 
       $("#btnlogin").click(function () {
@@ -296,8 +298,12 @@
                 },
                 success: function (respuesta) {
                     var cadena = "";
+                    tipodocumento = $("#Tipoid").val();
+                    identificacion = $("#Documento").val()
+                    console.log(tipodocumento);
+                    console.log(identificacion);
+                    alert(respuesta);
 
-                        alert(respuesta);
                 },
                 beforeSend: function () {
                     console.log("Se enviara");
@@ -319,11 +325,11 @@
                 },
                 success: function (respuesta) {
                     var cadena = "";
-                    cadena = '<tr><th>Tipo Identificación</th><th> Número de Identificación </th><th>Nombre </th><th></th></tr>';
+                    cadena = '<tr><th>Tipo Identificación</th><th> Número de Identificación </th><th>Nombre </th><th>Pago</th></tr>';
                     $.each(respuesta, function (index, value) {
                         cadena = cadena + '<tr>' + '<td>' + value.TipoIdentificacion + '</td>'
                             + '<td>' + value.NumIdentificacion + '</td>' +
-                            '<td>' + value.NombresUsuario + '</td>' + '<td><input type="button" class="edit" name="btnEditar" value="Agregar Pago"></td></tr>';
+                            '<td>' + value.NombresUsuario + '</td>' + '<td><input type="button" class="edit" name="btnEditar" value="Agregar Pago" data-toggle="modal" data-target="#myModal"></td></tr>';
                     });
                     $("#tbl").empty();
                     $("#tbl").append(cadena);
@@ -376,10 +382,11 @@
                 },
                 success: function (respuesta) {
                     var cadena = "";
-                    cadena = '<tr><th>Clase de asociado</th><th> Valor de aporte (En COP) </th><th></th>';
+                    cadena = '<tr><th>Clase de asociado</th><th> Valor de aporte (En COP) </th><th><button class="ui-button ui-widget ui-corner-all" id="btnAgregarParametro" value="Registrarse" data-toggle="modal" data-target="#myModal3">Agregar parámetro</button></th>';
                     $.each(respuesta, function (index, value) {
-                        cadena = cadena + '<tr>' + '<td>' + value.Descripcion + '</td>'
-                            + '<td>' + value.Valor + '</td>' + '<td> <button class="ui-button ui-widget ui-corner-all" data-toggle="modal" data-target="#myModal" href= "#" > Modificar</button></td ></tr> ';
+                        cadena = cadena + '<tr data-toggle="modal" data-id=' + value.IdParametros + '" data-target="#myModal">' + '<td>' + value.Descripcion + '</td>'
+                            + '<td>' + value.Valor + '</td>' + '<th> <button id="Modal_proyecto" class="ui-button ui-widget ui-corner-all" data-toggle="modal"  onclick="prueba(' + value.IdParametros + ')" data-target="#myModal" href= "#"  data-id=' + value.IdParametros +
+                            '> Modificar</button><button id="Modal_proyecto2"type="button" class="ui-button ui-widget ui-corner-all" data-toggle="modal" data-target="#myModal2">Eliminar</button></th ></tr> ';
                     });
                     $("#tblAdmin").empty();
                     $("#tblAdmin").append(cadena);
@@ -404,7 +411,7 @@
 
     //}
               function BuscarUsuario() {
-                  // Declare variables 
+                  // Declare variables
                   var input, filter, table, tr, td, i;
                   input = document.getElementById("txtUsuario");
                   filter = input.value.toUpperCase();
@@ -413,9 +420,10 @@
 
                   // Loop through all table rows, and hide those who don't match the search query
                   for (i = 0; i < tr.length; i++) {
-                      td = tr[i].getElementsByTagName("td")[2];
-                      if (td) {
-                          if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                      td = tr[i].getElementsByTagName("td")[1];
+                      td2 = tr[i].getElementsByTagName("td")[2];
+                      if (td || td2) {
+                          if (td.innerHTML.toUpperCase().indexOf(filter) > -1 || td2.innerHTML.toUpperCase().indexOf(filter) > -1) {
                               tr[i].style.display = "";
                           } else {
                               tr[i].style.display = "none";
@@ -423,4 +431,191 @@
                       }
                   }
               }
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/sp_SP/sdk.js#xfbml=1&version=v2.11';
+        fjs.parentNode.insertBefore(js, fjs);
+              }(document, 'script', 'facebook-jssdk'));
+
+    function prueba(value) {
+
+        $.ajax({
+            url: '@Url.Action("SeleccionarItem", "Home")',
+            type: 'POST',
+            async: true,
+            dataType: "json",
+            data: { "id": value },
+            error: function (response, status, error) {
+                console.log(error);
+            },
+            success: function (respuesta) {
+                var cadena = "";
+                console.log(respuesta.id);
+                console.log(respuesta.Descripcion);
+                console.log(respuesta.Valor);
+
+                var modal = $('#myModal')
+                modal.find('.modal-body #labelh').text(respuesta.id)
+                modal.find('.modal-body #DescripcionInfo').val(respuesta.Descripcion)
+                modal.find('.modal-body #Valor').val(respuesta.Valor)
+            },
+            beforeSend: function () {
+                console.log("Se enviara");
+            },
+            complete: function () {
+                console.log("Termino");
+            }
+        });
+    }
+
+///*    $(window).load(function ()*/ {
+//        $('#myModal').modal({
+//            keyboard: true,
+//            backdrop: "static",
+//            show: false,
+
+//        }).on('show', function () {
+//            var getIdFromRow = $(event.target).closest('tr').data('id');
+//            //make your ajax call populate items or what even you need
+//            $(this).find('#centeredmodal').html($('<b> Order Id selected: ' + getIdFromRow + '</b>'))
+//        });
+//    });
+    function EliminarParametro() {
+        var txt;
+        var r = confirm("¿Desea eliminar este parametro?");
+        if (r == true) {
+            txt = "Ok";
+        }
+    }
+
+    $("#btnModificarInfo").click(function () {
+        var modal = $('#myModal')
+        $.ajax({
+                url: '@Url.Action("ActualizarParametro", "Home")',
+                type: 'POST',
+                async: true,
+                dataType: "json",
+                data: {
+                    "id": modal.find('.modal-body #labelh').text(), "Descripcion": modal.find('.modal-body #DescripcionInfo').val(), "Valor": modal.find('.modal-body #Valor').val()
+                },
+                error: function (response, status, error) {
+                    console.log(error);
+                },
+                success: function (respuesta) {
+                    var cadena = "";
+
+                    alert(respuesta);
+                },
+                beforeSend: function () {
+                    console.log("Se enviara");
+                },
+                complete: function () {
+                    console.log("Termino");
+                }
+            });
+    });
+    $("#btnAgregarInfo").click(function () {
+        var modal = $('#myModal3')
+        $.ajax({
+                url: '@Url.Action("CrearParametro", "Home")',
+                type: 'POST',
+                async: true,
+                dataType: "json",
+                data: {
+                   "Descripcion": modal.find('.modal-body #DescripcionInfo').val(), "Valor": modal.find('.modal-body #Valor').val()
+                },
+                error: function (response, status, error) {
+                    console.log(error);
+                },
+                success: function (respuesta) {
+                    var cadena = "";
+
+                    alert(respuesta);
+                },
+                beforeSend: function () {
+                    console.log("Se enviara");
+                },
+                complete: function () {
+                    console.log("Termino");
+                }
+            });
+    });
+    $("#btnmodificarusuario").click(function () {
+
+        $.ajax({
+                url: '@Url.Action("BuscarUsuario", "Home")',
+                type: 'POST',
+                async: true,
+                dataType: "json",
+                data: {
+                    "Tipoid": tipodocumento, "NumId": identificacion
+                },
+                error: function (response, status, error) {
+                    console.log(error);
+
+                },
+                success: function (respuesta) {
+                    var cadena = "";
+                    if (respuesta.Mensaje == "") {
+                    //    $('#contenedor').show();
+                        cadena1 = respuesta.miusuario.CodUsuario;
+                        $("#NumId").val(respuesta.miusuario.NumId);
+                        $("#NomUsuario").val(respuesta.miusuario.NomUsuario);
+                        $("#ApellidosUsuario").val(respuesta.miusuario.ApellidosUsuario);
+                        $("#FechaNacimiento").val(GetFechaDDMMYYY(respuesta.miusuario.FechaNacimiento));
+                        console.log(respuesta.miusuario.FechaNacimiento);
+                        console.log(GetFechaDDMMYYY(respuesta.miusuario.FechaNacimiento));
+                        $("#CiudadNacimiento").val(respuesta.miusuario.CiudadNacimiento);
+                        $("#DepartamentoNacimiento").val(respuesta.miusuario.DepartamentoNacimiento);
+                        $("#PaisNacimiento").val(respuesta.miusuario.PaisNacimiento);
+                        $("#CiudadResidencia").val(respuesta.miusuario.CiudadResidencia);
+                        $("#DepartamentoResidencia").val(respuesta.miusuario.DepartamentoResidencia);
+                        $("#PaisResidencia").val(respuesta.miusuario.PaisResidencia);
+                        $("#DireccionResidencia").val(respuesta.miusuario.DireccionResidencia);
+                        $("#TelefonoFijo").val(respuesta.miusuario.TelefonoFijo);
+                        $("#TelefonoCelular").val(respuesta.miusuario.TelefonoCelular);
+                        $("#CorreoElectronico").val(respuesta.miusuario.CorreoElectronico);
+                        $("#InstitucionEgreso").val(respuesta.miusuario.InstitucionEgreso);
+                        $("#AnioEgreso").val(respuesta.miusuario.AnioEgreso);
+                        $("#TipoAfiliacion").val(respuesta.miusuario.TipoAfiliacion);
+                        $("#TituloPregrado").val(respuesta.miusuario.TituloPregrado);
+                        $("#InstitucionPregrado").val(respuesta.miusuario.InstitucionPregrado);
+                        $("#AnioGraduacionPregrado").val(respuesta.miusuario.AnioGraduacionPregrado);
+                        $("#TituloPosgrado").val(respuesta.miusuario.TituloPosgrado);
+                        $("#InstitucionPosgrado").val(respuesta.miusuario.InstitucionPosgrado);
+                        $("#AnioGraduacionPosgrado").val(respuesta.miusuario.AnioGraduacionPosgrado);
+                        $("#NombreEmpresa").val(respuesta.miusuario.NomEmpresaTrabajo);
+                        $("#Cargo").val(respuesta.miusuario.Cargo);
+                        $("#DireccionEmpresa").val(respuesta.miusuario.DirEmpresa);
+                        $("#TelefonoEmpresa").val(respuesta.miusuario.TelefonoEmpresa);
+                    } else {
+                        alert(respuesta.Mensaje);
+                    }
+                },
+                beforeSend: function () {
+                    console.log("Se enviara");
+
+                },
+                complete: function () {
+                    console.log("Termino");
+
+
+                }
+            });
+    });
+    $('#SelectAnios').load('#', function () {
+        var min = new Date().getFullYear() + 1,
+            max = min - 9,
+            select = document.getElementById('#SelectAnios');
+
+        for (var i = max; i <= min; i++) {
+            var opt = document.createElement('option');
+            opt.value = i;
+            opt.innerHTML = i;
+            select.appendChild(opt);
+        }
+    });
+
 </script>
