--- a/AldeaApp/AldeaApp/Views/Home/Login.cshtml
+++ b/AldeaApp/AldeaApp/Views/Home/Login.cshtml
@@ -1,17 +1,19 @@
-﻿<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xd-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4" >
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-        <h2>Iniciar sesión</h2>
-        <select id="Tipoid" class="form-control">
-            <option value="" disabled selected hidden>Elegir tipo de documento</option>
-            <option value="CC">Cédula de Ciudadanía</option>
-            <option value="CE">Cédula de Extranjería</option>
-            <option value="NIT">Número de Identificación Tributaria</option>
-        </select>
-        <input type="text" id="Documento" class="form-control" autocomplete="off" maxlength="50" placeholder="Documento" required />
-        <input type="password" id="Contrasena" class="form-control" autocomplete="off" maxlength="40" placeholder="Contraseña" required />
-        <button class="ui-button ui-widget ui-corner-all" id="btnlogin" value="Login">Iniciar sesión</button>
-        <a id="linkreg" class="enlace" href='@Url.Action("Registro","Home")'>Registrarse</a>
+﻿<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xd-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4">
+    <div class="form-group">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="form-group">
+                <h2>Iniciar sesión</h2>
+                <select id="Tipoid" class="form-control">
+                    <option value="" disabled selected hidden>Elegir tipo de documento</option>
+                    <option value="CC">Cédula de Ciudadanía</option>
+                    <option value="CE">Cédula de Extranjería</option>
+                    <option value="NIT">Número de Identificación Tributaria</option>
+                </select>
+                <input type="text" id="Documento" class="form-control" autocomplete="off" maxlength="50" placeholder="Documento" required />
+                <input type="password" id="Contrasena" class="form-control" autocomplete="off" maxlength="40" placeholder="Contraseña" required />
+                <button class="ui-button ui-widget ui-corner-all" id="btnlogin" value="Login">Iniciar sesión</button>
+                <a id="linkreg" class="enlace" href='@Url.Action("Registro","Home")'>Registrarse</a>
+            </div>
+        </div>
     </div>
-
-
 </div>
