--- a/AldeaApp/AldeaApp/Views/Home/Modificar.cshtml
+++ b/AldeaApp/AldeaApp/Views/Home/Modificar.cshtml
@@ -134,8 +134,13 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                         <div class="form-group">
-                            <label class="labelLeyenda">Tipo de afiliación</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Digite su afiliación con ALDEA." />
+                            <label class="labelLeyenda">Tipo de afiliación</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Formato: MM/DD/YYYY" />
                             <input type="text" id="TipoAfiliacion" value="" class="form-control" autocomplete="off" maxlength="50" required />
+                            <select id="TipoAfiliacion" class="form-control">
+                                <option value="Egresados con menos de 3 años de antigüedad">Egresados < 3 años de antigüedad </option>
+                                <option value="Egresados con más de 3 años de antigüedad">  Egresados > 3 años de antigüedad</option>
+                                <option value="Asociados junta ALDEA">Asociados junta ALDEA</option>
+                            </select>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">
