--- a/AldeaApp/AldeaApp/Views/Home/ModificarmiUsuario.cshtml
+++ b/AldeaApp/AldeaApp/Views/Home/ModificarmiUsuario.cshtml
@@ -41,7 +41,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <div class="form-group">
-                    <label class="labelLeyenda">Fecha de nacimiento</label>
+                    <label class="labelLeyenda">Fecha de nacimiento</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Formato: MM/DD/YYYY" />
                     <!--  <input type="date" id="FechaNacimiento" min="1920-01-01" value="" class="form-control" autocomplete="off" maxlength="50" />-->
                     <input type="text" id="FechaNacimiento" class="form-control" autocomplete="off" maxlength="50">
                 </div>
@@ -122,8 +122,12 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <div class="form-group">
-                    <label class="labelLeyenda">Tipo de afiliación</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Digite su afiliación con ALDEA." />
-                    <input type="text" id="TipoAfiliacion" value="" class="form-control" autocomplete="off" maxlength="50" required />
+                    <label class="labelLeyenda">Tipo de afiliación</label>
+                    <select id="TipoAfiliacion" class="form-control">
+                        <option value="Egresados con menos de 3 años de antigüedad">Egresados < 3 años de antigüedad </option>
+                        <option value="Egresados con más de 3 años de antigüedad">  Egresados > 3 años de antigüedad</option>
+                        <option value="Asociados junta ALDEA">Asociados junta ALDEA</option>
+                    </select>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
