--- a/AldeaApp/AldeaApp/Views/Home/Registro.cshtml
+++ b/AldeaApp/AldeaApp/Views/Home/Registro.cshtml
@@ -21,6 +21,12 @@
                     </select>
 
                 </div>
+                @*<div class="form-group">
+                    <label class="labelLeyenda">Tipo de documento</label>
+                    <select id="Tipoid" class="form-control">                   
+                    </select>
+
+                </div>*@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -45,7 +51,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">
                 <div class="form-group">
-                    <label class="labelLeyenda">Fecha de nacimiento</label>
+                    <label class="labelLeyenda">Fecha de nacimiento</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Formato: MM/DD/YYYY" />
                    <!--  <input type="date" id="FechaNacimiento" min="1920-01-01" value="" class="form-control" autocomplete="off" maxlength="50" />-->
                     <input type="text" id="FechaNacimiento" class="form-control" autocomplete="off" maxlength="50">
                 </div>
@@ -126,8 +132,12 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                 <div class="form-group">
-                    <label class="labelLeyenda">Tipo de afiliación</label><img class="imgayuda" src="~/Content/ImagesOwner/informacion.png" title="Digite su afiliación con ALDEA."  />
-                    <input type="text" id="TipoAfiliacion" value="" class="form-control" autocomplete="off" maxlength="50" required />
+                    <label class="labelLeyenda">Tipo de afiliación</label>
+                    <select id="TipoAfiliacion" class="form-control">
+                        <option value="Egresados con menos de 3 años de antigüedad">Egresados < 3 años de antigüedad </option>
+                        <option value="Egresados con más de 3 años de antigüedad">  Egresados > 3 años de antigüedad</option>
+                        <option value="Asociados junta ALDEA">Asociados junta ALDEA</option>
+                    </select>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">
@@ -252,6 +262,20 @@
 
 </div>
 <script type="text/javascript">
+    //window.onDOMContentLoaded = populates();
+    //function populates() {
+    //    var max = new Date().getFullYear() + 1;
+    //    var min = max - 9;
+    //    select = document.getElementById('Tipoid');
+
+    //    for (var i = min; i <= max; i++) {
+    //        var opt = document.createElement('option');
+    //        opt.value = i;
+    //        opt.innerHTML = i;
+    //        select.appendChild(opt);
+    //    }
+
+    //};
     var label = $("mensajeemergente");
     $("#btnRegistro").click(function () {
 
